Enhance README with detailed system overview, architecture, and usage instructions; update log message in BinanceWebSocketAdapter for clarity.